布局稍作修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".FullScreenActivity"
+        <activity android:name=".MainActivity"
                   android:configChanges="orientation|screenSize|keyboardHidden"
-                  android:screenOrientation="landscape">
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,9 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".MainActivity"
+                android:name=".FullScreenActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait" />
+                android:screenOrientation="landscape" />
     </application>
 
 </manifest>
