--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 android:name=".FullScreenActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="landscape" />
+
+        <meta-data
+                android:name="design_width_in_dp"
+                android:value="360"/>
     </application>
 
 </manifest>
