视频封面背景修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'me.jessyan:autosize:1.1.2'
     implementation project(':videolibrary')
+    //implementation 'com.github.liuninglxn:FullVideoView:v1.2.4'
 }
