--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 android:name=".FullScreenActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="landscape" />
+        <activity android:name=".TeacherDetailActivity"/>
 
         <meta-data
                 android:name="design_width_in_dp"
