--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,11 +15,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
-
         sourceCompatibility JavaVersion.VERSION_1_8
-
         targetCompatibility JavaVersion.VERSION_1_8
-
     }
     buildTypes {
         release {
@@ -32,12 +29,17 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
     implementation 'me.jessyan:autosize:1.1.2'
     implementation project(':videolibrary')
-    //implementation 'com.github.liuninglxn:FullVideoView:v1.2.4'
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.2'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.2'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.2'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.2'
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.2'
+    //implementation 'com.github.liuninglxn:FullVideoView:v1.2.5'
 }
