--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
     implementation 'me.jessyan:autosize:1.1.2'
     implementation project(':videolibrary')
-    //implementation 'com.github.liuninglxn:FullVideoView:v1.2.5'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.2'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.2'
+    //implementation 'com.github.liuninglxn:FullVideoView:v1.2.6'
 }
